--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,7 +12,7 @@ html, body {
     
 }
 body {
-    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
+    background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -30,7 +30,7 @@ section#telefone {
     height: 627px;
     width: 350px;
     background-color: blue;
-    background: url(../imagens/frame-iphone.png)no-repeat;
+    background: url('../imagens/frame-iphone.png')no-repeat;
 }
 
 iframe#tela {
@@ -39,4 +39,17 @@ iframe#tela {
     left: 22px;
     width: 269px;
     height:  471px;
+}
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgb(0, 0, 0.400);
+    box-sizing: border-box;
+}
+section#redes-sociais img:hover {
+    border: 2px solid white;
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.0623);
+    transition: transform .3s;
 }
